[project]
name = "tianchi-repurchase-predict"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13.10"
dependencies = [
    "catboost==1.2.8",
    "lightgbm>=4.6.0",
    "loguru==0.7.3",
    "matplotlib>=3.10.8",
    "numpy==2.4.1",
    "pandas==2.3.3",
    "pytabkit==1.7.3",
    "scikit-learn==1.8.0",
    "torch==2.9.0",
    "xgboost==3.1.3",
]

[tool.uv.sources]
torch = [
{ index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
{ index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
